// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly 1`] = `
<div
  className="App"
>
  <header
    className="MainHeader"
  >
    <MainTitle />
      
    <NavBar />
  </header>
  <main
    className="MainSection"
  >
    <section
      className="Section1"
    >
      <Thumbnail
        Date="12/18/90"
        Img="snowMountains.png"
        Likes={10}
        Title="Snow Mountains"
      />
      <div
        className="InnerSection"
      >
        <Thumbnail
          Img="bigCities.png"
          Likes={10}
          Title="Big Cities"
        />
        <Thumbnail
          Img="longDesert.png"
          Likes={1}
          Title="Long Desert"
        />
      </div>
    </section>
    <section
      className="Section2"
    >
      <Thumbnail
        Date="6/6/96"
        Id="ThumbnailSection2"
        Img="deepOceans.png"
        Likes={10}
        Title="Long Desert"
      />
      <Button
        Img="buttonBackground.svg"
      />
    </section>
  </main>
</div>
`;

exports[`App should render correctly with mount 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="MainHeader"
    >
      <MainTitle>
        <div
          className="MainTitle"
        >
          Blog
        </div>
      </MainTitle>
        
      <NavBar>
        <nav
          className="NavBar"
        >
          Latest Updates
        </nav>
      </NavBar>
    </header>
    <main
      className="MainSection"
    >
      <section
        className="Section1"
      >
        <Thumbnail
          Date="12/18/90"
          Img="snowMountains.png"
          Likes={10}
          Title="Snow Mountains"
        >
          <article
            className="ArticleWrapper"
            style={
              Object {
                "backgroundImage": "url(snowMountains.png)",
              }
            }
          >
            <div
              className="PicturesAllInfoWrapper"
            >
              <header
                className="ArticleHeader"
              >
                Snow Mountains
              </header>
              <div
                className="PicturesInfoWrapper"
              >
                <p
                  className="LikesInfo"
                >
                  10
                   Likes
                </p>
                <p
                  className="DateInfo"
                >
                  12/18/90
                </p>
              </div>
            </div>
          </article>
        </Thumbnail>
        <div
          className="InnerSection"
        >
          <Thumbnail
            Img="bigCities.png"
            Likes={10}
            Title="Big Cities"
          >
            <article
              className="ArticleWrapper SmallThumbnail"
              style={
                Object {
                  "backgroundImage": "url(bigCities.png)",
                }
              }
            >
              <div
                className="PicturesAllInfoWrapper"
              >
                <header
                  className="ArticleHeader SmallFont"
                >
                  Big Cities
                </header>
                <div
                  className="PicturesInfoWrapper"
                >
                  <p
                    className="LikesInfo"
                  >
                    10
                     Likes
                  </p>
                </div>
              </div>
            </article>
          </Thumbnail>
          <Thumbnail
            Img="longDesert.png"
            Likes={1}
            Title="Long Desert"
          >
            <article
              className="ArticleWrapper SmallThumbnail"
              style={
                Object {
                  "backgroundImage": "url(longDesert.png)",
                }
              }
            >
              <div
                className="PicturesAllInfoWrapper"
              >
                <header
                  className="ArticleHeader SmallFont"
                >
                  Long Desert
                </header>
                <div
                  className="PicturesInfoWrapper"
                >
                  <p
                    className="LikesInfo"
                  >
                    1
                     Likes
                  </p>
                </div>
              </div>
            </article>
          </Thumbnail>
        </div>
      </section>
      <section
        className="Section2"
      >
        <Thumbnail
          Date="6/6/96"
          Id="ThumbnailSection2"
          Img="deepOceans.png"
          Likes={10}
          Title="Long Desert"
        >
          <article
            className="ArticleWrapper ThumbnailSection2"
            style={
              Object {
                "backgroundImage": "url(deepOceans.png)",
              }
            }
          >
            <div
              className="PicturesAllInfoWrapper"
            >
              <header
                className="ArticleHeader"
              >
                Long Desert
              </header>
              <div
                className="PicturesInfoWrapper"
              >
                <p
                  className="LikesInfo"
                >
                  10
                   Likes
                </p>
                <p
                  className="DateInfo"
                >
                  6/6/96
                </p>
              </div>
            </div>
          </article>
        </Thumbnail>
        <Button
          Img="buttonBackground.svg"
        >
          <button
            className="Button"
            style={
              Object {
                "backgroundImage": "url(buttonBackground.svg)",
              }
            }
          >
            <div
              className="ButtonEffect"
            >
              <div
                className="ButtonInner"
              >
                <div>
                  View More
                </div>
              </div>
            </div>
          </button>
        </Button>
      </section>
    </main>
  </div>
</App>
`;
